# Microservices-E-Commerce

./: .gitignore
GraphRAG/: pyproject.toml  requirements.txt
GraphRAG/app/api/: dependencies.py  main.py  schemas.py
GraphRAG/app/api/routes/: chat.py  health.py  recommend.py  search.py
GraphRAG/app/core/: logging.py  settings.py  telemetry.py
GraphRAG/app/domain/: events.py  product_document.py  retrieval_result.py  search_query.py
GraphRAG/app/embeddings/: base.py  bge_m3_provider.py  ollama_provider.py  service.py
GraphRAG/app/generation/: answer_generator.py  intent_classifier.py  llm_client.py  query_rewriter.py
GraphRAG/app/graph/: cypher_queries.py  graph_repository.py  neo4j_client.py
GraphRAG/app/ingestion/: attribute_classifier.py  transformers.py
GraphRAG/app/pipeline/: chat_pipeline.py  recommendation_pipeline.py  search_pipeline.py
GraphRAG/app/ranking/: reranker.py  scoring.py
GraphRAG/app/retrieval/: graph_expansion.py  hybrid_search.py  metadata_filters.py  result_merger.py
GraphRAG/app/utils/: __init__.py
GraphRAG/app/vector/: qdrant_client.py  vector_store.py
GraphRAG/app/workers/: __main__.py  consumer.py
GraphRAG/docker/: Dockerfile  entrypoint.sh
GraphRAG/prompts/: answer_generation.txt  intent_classification.txt  query_rewrite.txt
GraphRAG/scripts/: reindex.py  seed.py
GraphRAG/tests/: conftest.py
GraphRAG/tests/integration/: test_api.py
GraphRAG/tests/unit/: test_attribute_classifier.py  test_metadata_filters.py  test_product_document.py  test_result_merger.py  test_scoring.py  test_transformers.py
(+350 files in other folders)
